ubuntu-mate-welcome (16.10.8~yakkety1.3) yakkety; urgency=medium

  [ Martin Wimpress ]
  * New upstream release.
  * Fix Audio Recorder, Gajim, InSync, KDE Connect Indicator, Kodi,
    Hedgewars, HipChat, MakeMKV, OBS Studio, Play on Linux, Ubuntu SDK,
    Ubuntu Software, Veracrypt and Wine Devel for Yakkety.
  * Update Emby and Pithos for Xenial.
  * Sync translations.

  [ Luke Horwell ]
  * Auto-focus search box. (LP: #1606361).
  * Fix app-index-debugger.py
  * Refine Getting Started.
  * Refine header/footer shadows and footer icons.
  * Reduce flickering under non Ambiant-MATE themes.
  * Update installation packages for LibreOffice, VirtualBox and Wireshark.

  [ Rob Loach ]
  * Add Thunderbird, Deja-Dup and Brasero.

  [ Polihron Alexandru ]
  * Add GNS3.

 -- Martin Wimpress <code@flexion.org>  Thu, 11 Aug 2016 21:41:14 +0100

ubuntu-mate-welcome (16.10.7) yakkety; urgency=medium

  [ Luke Horwell ]
  * Set variable whether running on an Ubuntu MATE system.
  * Do not adapt the colours on non-Ubuntu MATE systems.
  * Do not check font DPI on non-Ubuntu MATE systems.
  * Autofocus the search box.
  * Sync Translations.

 -- Martin Wimpress <code@flexion.org>  Tue, 26 Jul 2016 22:34:57 +0100

ubuntu-mate-welcome (16.10.6) yakkety; urgency=medium

  [ Martin Wimpress ]
  * Update minimum hardware requirements.
  * Migrate to python3-setproctitle module.

  [ Luke Horwell ]
  * Remove Antiviral.
  * Correct Darktable architecture listing.
  * Update Blender's Alternate to field.
  * Add Welcome PPA to known repository list.
  * Update application listings, drops Trusty where packages unavailable.
  * Correct Lithuanian string for Welcome launcher.

 -- Martin Wimpress <code@flexion.org>  Tue, 12 Jul 2016 10:23:20 +0100

ubuntu-mate-welcome (16.10.5.1) yakkety; urgency=medium

  [ Martin Wimpress ]
  * Update Software Boutique news.
  * Fix broken applications.json.

 -- Martin Wimpress <code@flexion.org>  Wed, 29 Jun 2016 06:16:43 +0100
