@@ -3,6 +3,7 @@
         "add": [
             "brasero",
             "deja-dup",
+            "gelemental",
             "gns3",
             "rhythmbox",
             "thunderbird"
@@ -20,6 +21,7 @@
             "obs-studio": "general",
             "pithos": "new-source",
             "playonlinux": "general",
+            "torbrowser-launcher": "new-source",
             "ubuntu-sdk": "general",
             "veracrypt": "new-source",
             "virtualbox": "general",
@@ -27,7 +29,8 @@
             "wireshark": "general"
         },
         "del": {
-            "kdeconnect": "no-source"
+            "kdeconnect": "no-source",
+            "torbrowser": "not-nice"
         }
     },
     "16.10.6": {
