@@ -5,7 +5,8 @@ ubuntu-mate-welcome (16.10.8~yakkety1.3) yakkety; urgency=medium
   * Fix Audio Recorder, Gajim, InSync, KDE Connect Indicator, Kodi,
     Hedgewars, HipChat, MakeMKV, OBS Studio, Play on Linux, Ubuntu SDK,
     Ubuntu Software, Veracrypt and Wine Devel for Yakkety.
-  * Update Emby and Pithos for Xenial.
+  * Update Emby, Pithos and TorBrowser for Xenial.
+  * Add gElemental.
   * Sync translations.
 
   [ Luke Horwell ]
